Update Java version to 17 and change task executor to fixed thread pool